@@ -1,3 +1,10 @@
+2005-03-24  Per Bothner  <per@bothner.com>
+
+	* BRL.java (instance): Replace static field by ...
+	(krl_instance, brl_instance): ... two new fields.
+	(<init>): Don't set instance field.
+	(getKrlInstance, getBrlInstance): Set appropriate instance field.
+
 2005-03-17  Per Bothner  <per@bothner.com>
 
 	* BRL.java (createReadTable): New method.
